--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-leap-day
 title: "The Conversational Intelligence Challenge 2 (ConvAI2)"
-description: "NIPS 2018 Competition"
+description: "NIPS (NeurIPS) 2018 Competition"
