--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-leap-day
-title: "The Conversational Intelligence Challenge 2 (ConvAI2)"
-description: "NIPS (NeurIPS) 2018 Competition"
+title: "ClariQ Challenge (ConvAI3)"
+description: "SCAI workshop @ EMLP 2020"
