--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-leap-day
-title: "ClariQ Challenge (ConvAI3)"
-description: "SCAI workshop @ EMLP 2020"
+title: "ConvAI3: Clarifying Questions for Open-Domain Dialogue Systems (ClariQ)"
+description: "SCAI workshop @ EMNLP 2020"
